--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -242,3 +242,7 @@ providers:
     fontcdn: google
     # Name or URL of the fontawesome icon font CDN provider
     iconcdn: fontawesome
+
+
+include:
+  - ".nojekyll"
