--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -12,9 +12,9 @@ jobs:
           node-version: '14'
       - run: npm install
       # 清理
-      - run: npx hexo clean
+      - run: hexo clean
       # 创建 nojekyll 文件
       - run: mkdir public
       - run: echo '# 此文件表明不需要 github 去使用 jekyll 构建本分支' >> public/.nojekyll
       # 构建 部署
-      - run: npm run deploy
+      - run: hexo deploy
