--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.0.0"
   },
   "dependencies": {
+    "bulma-stylus": "^0.8.0",
     "hexo": "^6.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
@@ -19,6 +20,7 @@
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-pagination": "^2.0.0",
     "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
