--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,52 @@
-name: Hexo Deploy
+ 
 
-on:
+# workflow name
+name: Hexo Blog CI
+
+# master branch on push, auto run
+on: 
   push:
     branches:
       - main
-
+      
 jobs:
-  build:
-    runs-on: ubuntu-18.04
-    if: github.event.repository.owner.id == github.event.sender.id
-
+  build: 
+    runs-on: ubuntu-latest 
+        
     steps:
-      - name: Checkout source
-        uses: actions/checkout@v2
-        with:
-          ref: main
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12'
-
-      - name: Setup Hexo
-        env:
-          ACTION_DEPLOY_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
-        run: |
-          mkdir -p ~/.ssh/
-          echo $ACTION_DEPLOY_KEY
-          echo "$ACTION_DEPLOY_KEY" > ~/.ssh/id_rsa
-          chmod 700 ~/.ssh
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.email "877526278@qq.com"
-          git config --global user.name "enncy"
-          npm install hexo-cli -g
-          npm install
-
-      - name: Deploy
-        # 清空 -> 创建 nojekyll 文件 -> 部署
-        run: |
-            ls -l
-            hexo clean
-            mkdir public
-            echo '# 此文件表明不需要 github 去使用 jekyll 构建本分支' >> public/.nojekyll
-            hexo deploy
+    # check it to your workflow can access it
+    # from: https://github.com/actions/checkout
+    - name: Checkout Repository main branch
+      uses: actions/checkout@v2 
+      
+    # from: https://github.com/actions/setup-node  
+    - name: Setup Node.js 12.x 
+      uses: actions/setup-node@v1
+      with:
+        node-version: "12.x"
+    
+    - name: Setup Hexo Dependencies
+      run: |
+        npm install hexo-cli -g
+        npm install        
+    
+    - name: Setup Deploy Private Key
+      env:
+        HEXO_DEPLOY_PRIVATE_KEY: ${{ secrets.HEXO_DEPLOY_KEY }}
+      run: |
+        mkdir -p ~/.ssh/
+        echo "$HEXO_DEPLOY_PRIVATE_KEY" > ~/.ssh/id_rsa 
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+                
+    - name: Setup Git Infomation
+      run: | 
+        git config --global user.name 'enncy' 
+        git config --global user.email '877526278@qq.com'
+    - name: Deploy Hexo 
+      run: |
+        hexo clean
+        hexo generate 
+        mkdir public
+        echo '# 此文件表明不需要 github 去使用 jekyll 构建本分支' >> public/.nojekyll
+        hexo deploy       
