--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,4 +48,7 @@ jobs:
         hexo clean
         hexo generate 
         echo '# 此文件表明不需要 github 去使用 jekyll 构建本分支' >> public/.nojekyll
+        cd public
+        ls -l
+        cd ..
         hexo deploy       
