--- a/_config.yml
+++ b/_config.yml
@@ -3,16 +3,16 @@ subtitle: 分享所学的知识
 description: 欢迎大家来到我的博客，我会尽量写很多优质的文档或文章分享给大家，感谢关注！
 keywords: 博客,代码,前端,后端,爬虫
 author: enncy
-language: 
-- zh-CN
-- en
-timezone: ''
+language:
+    - zh-CN
+    - en
+timezone: ""
 url: https://enncy.github.io/
-permalink: ':year/:month/:day/:title/'
+permalink: ":year/:month/:day/:title/"
 permalink_defaults: null
 pretty_urls:
-  trailing_index: true
-  trailing_html: true
+    trailing_index: true
+    trailing_html: true
 
 source_dir: source
 public_dir: public
@@ -20,19 +20,19 @@ tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: ':lang'
+i18n_dir: ":lang"
 skip_render: null
 
 # 文章设置
 toc: true
-new_post_name: ':title.md'
+new_post_name: ":title.md"
 default_layout: post
 titlecase: false
 
 external_link:
-  enable: true
-  field: site
-  exclude: ''
+    enable: true
+    field: site
+    exclude: ""
 
 filename_case: 0
 render_drafts: false
@@ -41,23 +41,23 @@ relative_link: false
 future: true
 
 highlight:
-  enable: true
-  line_number: true
-  auto_detect: false
-  tab_replace: ''
-  wrap: true
-  hljs: false
+    enable: true
+    line_number: true
+    auto_detect: false
+    tab_replace: ""
+    wrap: true
+    hljs: false
 
 prismjs:
-  enable: false
-  preprocess: true
-  line_number: true
-  tab_replace: ''
+    enable: false
+    preprocess: true
+    line_number: true
+    tab_replace: ""
 
 index_generator:
-  path: ''
-  per_page: 10
-  order_by: '-date'
+    path: ""
+    per_page: 10
+    order_by: "-date"
 
 default_category: uncategorized
 category_map: null
@@ -70,31 +70,27 @@ updated_option: mtime
 per_page: 19
 pagination_dir: page
 include:
-  - ".nojekyll"
+    - ".nojekyll"
 exclude: null
 ignore: null
 theme: icarus
 
 deploy:
-  type: git
-  repo: git@github.com:enncy/enncy.github.io.git
-  branch: main
-  message: deploy blog
-
-
+    type: git
+    repo: git@github.com:enncy/enncy.github.io.git
+    branch: main
+    message: deploy blog
 
 #RSS订阅
-plugin:
- hexo-generator-feed
+plugin: hexo-generator-feed
 #Feed Atom
 feed:
-  type: atom #RSS的类型(atom/rss2)
-  path: atom.xml #文件路径,默认是atom.xml/rss2.xml
-  limit: 20 #展示文章的数量,使用0或则false代表展示全部
-  hub:
-  content: #在RSS文件中是否包含内容 ,有3个值 true/false默认不填为false
-  content_limit: 140 #指定内容的长度作为摘要,仅仅在上面content设置为false和没有自定义的描述出现
-  content_limit_delim: ' ' #上面截取描述的分隔符,截取内容是以指定的这个分隔符作为截取结束的标志.在达到规定的内容长度之前最后出现的这个分隔符之前的内容,，防止从中间截断.
-  order_by: -date
-  icon: #icon.png
- 
+    type: atom #RSS的类型(atom/rss2)
+    path: atom.xml #文件路径,默认是atom.xml/rss2.xml
+    limit: 20 #展示文章的数量,使用0或则false代表展示全部
+    hub:
+    content: #在RSS文件中是否包含内容 ,有3个值 true/false默认不填为false
+    content_limit: 140 #指定内容的长度作为摘要,仅仅在上面content设置为false和没有自定义的描述出现
+    content_limit_delim: " " #上面截取描述的分隔符,截取内容是以指定的这个分隔符作为截取结束的标志.在达到规定的内容长度之前最后出现的这个分隔符之前的内容,，防止从中间截断.
+    order_by: -date
+    icon: #icon.png
