--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.0.0"
   },
   "dependencies": {
+    "scripts":"./scripts/index.js",
     "bulma-stylus": "^0.8.0",
     "hexo": "^6.0.0",
     "hexo-deployer-git": "^3.0.0",
@@ -26,6 +27,7 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-icarus": "^5.0.0-rc.1",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "markdown-it-task-lists": "^2.1.1"
   }
 }
